--- a/00/01.md
+++ b/00/01.md
@@ -21,3 +21,17 @@
 ## 感知器
 
 看到这里，如果你还是一头雾水，那也是很正常的。为了理解神经网络，我们应该先理解神经网络的组成单元——神经元。神经元也叫做感知器。感知器算法在上个世纪 50-70 年代很流行，也成功解决了很多问题。并且，感知器算法也是非常简单的。
+
+### 感知器的定义
+
+下图是一个感知器：
+![00-01-02](../.gitbook/assets/00/01-02.png)
+
+可以看到，一个感知器有如下组成部分：
+
+- 输入权值 一个感知器可以接收多个输入（x1,x2,...xn），每个输入上有一个权值 wi，此外还有一个偏置项 b，就是上图中的 w0。
+- **函数 感知器的**函数可以有很多选择，比如我们可以选择下面这个阶跃函数 f 来作为函数：
+
+$$
+f(z)=\begin{equation}\begin{cases}1\qquad z>0\\0\qquad otherwise\end{cases}\end{equation}
+$$
