--- a/00/01.md
+++ b/00/01.md
@@ -30,7 +30,7 @@
 
 可以看到，一个感知器有如下组成部分：
 
-- **输入权值** 一个感知器可以接收多个输入$x1,x2,...xn$，每个输入上有一个权值 $$w_i\in\Re$$，此外还有一个**偏置项**$$b\in\Re$$，就是上图中的$$w_0$$。
+- **输入权值** 一个感知器可以接收多个输入$x_1,x_2,...x_n$，每个输入上有一个权值 $$w_i\in\Re$$，此外还有一个**偏置项**$$b\in\Re$$，就是上图中的$$w_0$$。
 - **激活函数** 感知器的激活函数可以有很多选择，比如我们可以选择下面这个**阶跃函数$f$**来作为函数：
 
 $$
