--- a/00/02.md
+++ b/00/02.md
@@ -1,12 +1,12 @@
-# 零基础入门深度学习(2) - 线性单元和梯度下降
+## 零基础入门深度学习(2) - 线性单元和梯度下降
 
 原文链接: <https://www.zybuluo.com/hanbingtao/note/448086>
 
-## 往期回顾
+### 往期回顾
 
 在上一篇文章中，我们已经学会了编写一个简单的感知器，并用它来实现一个线性分类器。你应该还记得用来训练感知器的『感知器规则』。然而，我们并没有关心这个规则是怎么得到的。本文通过介绍另外一种『感知器』，也就是『线性单元』，来说明关于机器学习一些基本的概念，比如模型、目标函数、优化算法等等。这些概念对于所有的机器学习算法来说都是通用的，掌握了这些概念，就掌握了机器学习的基本套路。
 
-## 线性单元是啥
+### 线性单元是啥
 
 感知器有一个问题，当面对的数据集不是**线性可分**的时候，『感知器规则』可能无法收敛，这意味着我们永远也无法完成一个感知器的训练。为了解决这个问题，我们使用一个**可导**的**线性函数**来替代感知器的**阶跃函数**，这种感知器就叫做**线性单元**。线性单元在面对线性不可分的数据集时，会收敛到一个最佳的近似上。
 
@@ -26,7 +26,7 @@ $$
 
 这样替换了激活函数之后，**线性单元**将返回一个**实数值**而不是**0,1 分类**。因此线性单元用来解决**回归**问题而不是**分类**问题。
 
-### 线性单元的模型
+#### 线性单元的模型
 
 当我们说**模型**时，我们实际上在谈论根据输入$$x$$预测输出$$y$$的**算法**。比如，$$x$$可以是一个人的工作年限，$$y$$可以是他的月薪，我们可以用某种算法来根据一个人的工作年限来预测他的收入。比如：
 
@@ -75,7 +75,7 @@ $$
 
 长成这种样子模型就叫做**线性模型**，因为输出就是输入特征的**线性组合**。
 
-### 监督学习和无监督学习
+#### 监督学习和无监督学习
 
 接下来，我们需要关心的是这个模型如何训练，也就是参数取什么值最合适。
 
@@ -85,7 +85,7 @@ $$
 
 很多时候，既有$$\mathrm{x}$$又有$$y$$的训练样本是很少的，大部分样本都只有$$\mathrm{x}$$。比如在语音到文本(STT)的识别任务中，$$\mathrm{x}$$是语音，$$y$$是这段语音对应的文本。我们很容易获取大量的语音录音，然而把语音一段一段切分好并**标注**上对应文字则是非常费力气的事情。这种情况下，为了弥补带标注样本的不足，我们可以用**无监督学习方法**先做一些**聚类**，让模型总结出哪些音节是相似的，然后再用少量的带标注的训练样本，告诉模型其中一些音节对应的文字。这样模型就可以把相似的音节都对应到相应文字上，完成模型的训练。
 
-### 线性单元的目标函数
+#### 线性单元的目标函数
 
 现在，让我们只考虑**监督学习**。
 
@@ -139,7 +139,7 @@ $$
 
 由此可见，模型的训练，实际上就是求取到合适的$$w$$，使(式 2)取得最小值。这在数学上称作**优化问题**，而$$E(\mathrm{w})$$就是我们优化的目标，称之为**目标函数**。
 
-### 梯度下降优化算法
+#### 梯度下降优化算法
 
 大学时我们学过怎样求函数$$y=f(x)$$的极值。函数的极值点，就是它的导数$$f'(x)=0$$的那个点。因此我们可以通过解方程$$f'(x)=0$$，求得函数的极值点$$(x_0,y_0)$$。
 
@@ -152,43 +152,53 @@ $$
 你可能要问了，为啥每次修改$$x$$的值，都能往函数最小值那个方向前进呢？这里的奥秘在于，我们每次都是向函数$$y=f(x)$$的**梯度**的**相反方向**来修改。什么是**梯度**呢？翻开大学高数课的课本，我们会发现**梯度**是一个向量，它指向**函数值上升最快**的方向。显然，梯度的反方向当然就是函数值下降最快的方向了。我们每次沿着梯度相反方向去修改的值，当然就能走到函数的最小值附近。之所以是最小值附近而不是最小值那个点，是因为我们每次移动的步长不会那么恰到好处，有可能最后一次迭代走远了越过了最小值那个点。步长的选择是门手艺，如果选择小了，那么就会迭代很多轮才能走到最小值附近；如果选择大了，那可能就会越过最小值很远，收敛不到一个好的点上。
 
 按照上面的讨论，我们就可以写出梯度下降算法的公式
+
 $$
 \mathrm{x}_{new}=\mathrm{x}_{old}-\eta\nabla{f(x)}
 $$
+
 其中，$$\nabla$$是**梯度算子**，$$\nabla{f(x)}$$就是指$$f(x)$$的梯度。$$\eta$$是步长，也称作**学习速率**。
 
-对于上一节列出的目标函数(式2)
+对于上一节列出的目标函数(式 2)
+
 $$
 E(\mathrm{w})=\frac{1}{2}\sum_{i=1}^{n}(\mathrm{y^{(i)}-\bar{y}^{(i)}})^2
 $$
+
 梯度下降算法可以写成
+
 $$
 \mathrm{w}_{new}=\mathrm{w}_{old}-\eta\nabla{E(\mathrm{w})}
 $$
+
 聪明的你应该能想到，如果要求目标函数的**最大值**，那么我们就应该用**梯度上升**算法，它的参数修改规则是
+
 $$
 \mathrm{w}_{new}=\mathrm{w}_{old}+\eta\nabla{E(\mathrm{w})}
 $$
+
 下面，请先做几次深呼吸，让你的大脑补充足够的新鲜的氧气，**我们要来求取**$$\nabla{E(\mathrm{w})}$$，然后带入上式，就能得到线性单元的参数修改规则。
 
 关于$$\nabla{E(\mathrm{w})}$$的推导过程，我单独把它们放到一节中。您既可以选择慢慢看，也可以选择无视。在这里，您只需要知道，经过一大串推导，目标函数$$E(w)$$的梯度是
+
 $$
 \nabla{E(\mathrm{w})}=-\sum_{i=1}^{n}(y^{(i)}-\bar{y}^{(i)})\mathrm{x}^{(i)}
 $$
 
-
 因此，线性单元的参数修改规则最后是这个样子
+
 $$
 \mathrm{w}_{new}=\mathrm{w}_{old}+\eta\sum_{i=1}^{n}(y^{(i)}-\bar{y}^{(i)})\mathrm{x}^{(i)}\qquad\qquad(式3)
 $$
+
 有了上面这个式子，我们就可以根据它来写出训练线性单元的代码了。
 
-需要说明的是，如果每个样本有M个特征，则上式中的$\mathrm{x},\mathrm{w}$都是M+1维**向量**(因为我们加上了一个恒为1的虚拟特征，参考前面的内容)，而是**标量**。用高逼格的数学符号表示，就是
+需要说明的是，如果每个样本有 M 个特征，则上式中的$\mathrm{x},\mathrm{w}$都是 M+1 维**向量**(因为我们加上了一个恒为 1 的虚拟特征，参考前面的内容)，而是**标量**。用高逼格的数学符号表示，就是
 
-#### $$\nabla{E}(\mathrm{w})$$的推导
+##### $$\nabla{E}(\mathrm{w})$$的推导
 
-### 随机梯度下降算法(Stochastic Gradient Descent, SGD)
+#### 随机梯度下降算法(Stochastic Gradient Descent, SGD)
 
-## 实现线性单元
+### 实现线性单元
 
-## 小结
+### 小结
