--- a/lstm/01.md
+++ b/lstm/01.md
@@ -31,3 +31,25 @@
 Input Sequence: 1, 2, 3, 4, 5
 Output Sequence: 6
 ```
+
+![lstm-1-1][lstm-1-1]
+
+<details>
+<summary></summary>
+Sequence prediction may also generally be referred to as sequence learning. Technically, we 
+could refer to all of the following problems as a type of sequence prediction problem. This can
+make things confusing for beginners.
+</details>
+序列预测一般也称为序列学习。从技术上讲，我们可以把下列所有问题都看作是一种序列预测问题。这可能会使初学者感到困惑。
+
+> Learning of sequential data continues to be a fundamental task and a challenge in
+> pattern recognition and machine learning. Applications involving sequential data
+> may require prediction of new events, generation of new sequences, or decision
+> making such as classification of sequences or sub-sequences.
+> 																						— On Prediction Using Variable Order Markov Models, 2004 .
+
+> *序列数据的学习一直是模式识别和机器学习的基本任务和挑战。涉及顺序数据的应用程序可能需要预测新事件、生成新序列或决策，如序列或子序列的分类。*
+
+
+
+[lstm-1-1]:../.gitbook/assets/lstm/lstm-1-1.png
