--- a/lstm/02.md
+++ b/lstm/02.md
@@ -7,7 +7,7 @@
 - 考虑配置“经过时间截断的反向传播”以及研究和深度学习库中使用的规范配置的概念。
 - 关于配置“经过时间截断的反向传播”以及研究和深度学习库中使用的规范配置的一种表示法。
 
-## Backpropagation Training Algorithm
+### Backpropagation Training Algorithm
 
 反向传播指的是两件事：
 
@@ -22,4 +22,4 @@
 4. 调整权重以使误差最小化。
 5. 重复。
 
-## Unrolling Recurrent Neural Networks
+### Unrolling Recurrent Neural Networks
