--- a/00/03.md
+++ b/00/03.md
@@ -414,7 +414,7 @@ $$
 
 ### 神经网络的实现
 
-> 完整代码请参考 GitHub: https://github.com/hanbt/learn_dl/blob/master/bp.py (python2.7)
+> 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/bp.py> (python2.7)
 
 现在，我们要根据前面的算法，实现一个基本的全连接神经网络，这并不需要太多代码。我们在这里依然采用面向对象设计。
 
@@ -998,7 +998,7 @@ if __name__ == '__main__':
 
 ### 向量化编程
 
-> 完整代码请参考 GitHub: https://github.com/hanbt/learn_dl/blob/master/fc.py (python2.7)
+> 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/fc.py> (python2.7)
 
 在经历了漫长的训练之后，我们可能会想到，肯定有更好的办法！是的，程序员们，现在我们需要告别面向对象编程了，转而去使用另外一种更适合深度学习算法的编程方式：向量化编程。主要有两个原因：一个是我们事实上并不需要真的去定义 Node、Connection 这样的对象，直接把数学计算实现了就可以了；另一个原因，是底层算法库会针对向量运算做优化（甚至有专用的硬件，比如 GPU），程序效率会提升很多。所以，在深度学习的世界里，我们总会想法设法的把计算表达为向量的形式。我相信优秀的程序员不会把自己拘泥于某种（自己熟悉的）编程范式上，而会去学习并使用最为合适的范式。
 
