--- a/00/04.md
+++ b/00/04.md
@@ -14,14 +14,14 @@ $$
 
 Relu 函数图像如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-0ac9923bebd3c9dd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-01][00-04-01]
 
 Relu 函数作为激活函数，有下面几大优势：
 
 - **速度快** 和 sigmoid 函数需要计算指数和倒数相比，relu 函数其实就是一个 max(0,x)，计算代价小很多。
 - **减轻梯度消失问题** 回忆一下计算梯度的公式$$\nabla=\sigma'\delta x$$。其中$$\sigma'$$，是 sigmoid 函数的导数。在使用反向传播算法进行梯度计算时，每经过一层 sigmoid 神经元，梯度就要乘上一个$$\sigma'$$。从下图可以看出，$$\sigma'$$函数最大值是 1/4。因此，乘一个$$\sigma'$$会导致梯度越来越小，这对于深层网络的训练是个很大的问题。而 relu 函数的导数是 1，不会导致梯度变小。当然，激活函数仅仅是导致梯度减小的一个因素，但无论如何在这方面 relu 的表现强于 sigmoid。使用 relu 激活函数可以让你训练更深的网络。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-ad98d6b22f1a66ab.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/360)
+![00-04-02][00-04-02]
 
 - **稀疏性** 通过对大脑的研究发现，大脑在工作的时候只有大约 5%的神经元是激活的，而采用 sigmoid 激活函数的人工神经网络，其激活率大约是 50%。有论文声称人工神经网络在 15%-30%的激活率时是比较理想的。因为 relu 函数在输入小于 0 时是完全不激活的，因此可以获得一个更低的激活率。
 
@@ -47,7 +47,7 @@ Relu 函数作为激活函数，有下面几大优势：
 
 首先，我们先获取一个感性认识，下图是一个卷积神经网络的示意图：
 
-![图1 卷积神经网络](http://upload-images.jianshu.io/upload_images/2256672-a36210f89c7164a7.png)
+![00-04-03][00-04-03]
 
 #### 网络架构
 
@@ -87,7 +87,7 @@ Relu 函数作为激活函数，有下面几大优势：
 
 假设有一个 5*5 的图像，使用一个 3*3 的 filter 进行卷积，想得到一个 3\*3 的 Feature Map，如下所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-548b82ccd7977294.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-04][00-04-04]
 
 为了清楚的描述**卷积**计算过程，我们首先对图像的每个像素进行编号，用$$x_{i,j}$$表示图像的第$$i$$行第$$j$$列元素；对 filter 的每个权重进行编号，用$$w_{m,n}$$表示第$$m$$行第$$n$$列权重，用$$w_b$$表示 filter 的**偏置项**；对 Feature Map 的每个元素进行编号，用$$a_{i,j}$$表示 Feature Map 的第$$i$$行第$$j$$列元素；用$$f$$表示**激活函数**(这个例子选择**relu 函数**作为激活函数)。然后，使用下列公式计算卷积：
 
@@ -109,7 +109,7 @@ $$
 
 计算结果如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-318017ad134effc5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-05][00-04-05]
 
 接下来，Feature Map 的元素的卷积计算方法为：
 
@@ -125,21 +125,21 @@ $$
 
 计算结果如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-b05427072f4c548d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-06][00-04-06]
 
 可以依次计算出 Feature Map 中所有元素的值。下面的动画显示了整个 Feature Map 的计算过程：
 
-![图2 卷积计算](http://upload-images.jianshu.io/upload_images/2256672-19110dee0c54c0b2.gif)
+![00-04-07][00-04-07]
 
 上面的计算过程中，步幅(stride)为 1。步幅可以设为大于 1 的数。例如，当步幅为 2 时，Feature Map 计算如下：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-273e3d9cf9dececb.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-08][00-04-08]
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-7f362ea9350761d9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-09][00-04-09]
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-f5fa1e904cb0287e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-10][00-04-10]
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-7919cabd375b4cfd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-11][00-04-11]
 
 我们注意到，当**步幅**设置为 2 的时候，Feature Map 就变成 2\*2 了。这说明图像大小、步幅和卷积后的 Feature Map 大小是有关系的。事实上，它们满足下面的关系：
 
@@ -176,7 +176,7 @@ $$
 
 下面的动画显示了包含两个 filter 的卷积层的计算。我们可以看到 7*7*3 输入，经过两个 3*3*3filter 的卷积(步幅为 2)，得到了 3*3*2 的输出。另外我们也会看到下图的**Zero padding**是 1，也就是在输入元素的周围补了一圈 0。**Zero padding**对于图像边缘部分的特征提取是很有帮助的。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-958f31b01695b085.gif)
+![00-04-12][]
 
 以上就是卷积层的计算方法。这里面体现了**局部连接**和**权值共享**：每层神经元只和上一层部分神经元相连(卷积计算规则)，且 filter 的权值对于上一层所有神经元都是一样的。对于包含两个 3*3*3 的 fitler 的卷积层来说，其参数数量仅有(3*3*3+1)\*2=56 个，且参数数量与上一层神经元个数无关。与**全连接神经网络**相比，其参数数量大大减少了。
 
@@ -1060,3 +1060,18 @@ class MaxPoolingLayer(object):
 2. [ReLu (Rectified Linear Units) 激活函数](http://www.mamicode.com/info-detail-873243.html)
 3. Jake Bouvrie, Notes on Convolutional Neural Networks, 2006
 4. [Ian Goodfellow, Yoshua Bengio, Aaron Courville, Deep Learning, MIT Press, 2016](http://www.deeplearningbook.org/)
+
+[00-04-01]: ../.gitbook/assets/00/04-01.png
+[00-04-02]: ../.gitbook/assets/00/04-02.png
+[00-04-03]: ../.gitbook/assets/00/04-03.png
+[00-04-04]: ../.gitbook/assets/00/04-04.png
+[00-04-05]: ../.gitbook/assets/00/04-05.png
+[00-04-06]: ../.gitbook/assets/00/04-06.png
+[00-04-07]: ../.gitbook/assets/00/04-07.gif
+[00-04-08]: ../.gitbook/assets/00/04-08.png
+[00-04-09]: ../.gitbook/assets/00/04-09.png
+[00-04-10]: ../.gitbook/assets/00/04-10.png
+[00-04-11]: ../.gitbook/assets/00/04-11.png
+[00-04-12]: ../.gitbook/assets/00/04-12.gif
+[00-04-13]: ../.gitbook/assets/00/04-13.png
+[00-04-14]: ../.gitbook/assets/00/04-01.png
