--- a/00/02.md
+++ b/00/02.md
@@ -1,12 +1,12 @@
-## 线性单元和梯度下降
+# 线性单元和梯度下降
 
 原文链接: <https://www.zybuluo.com/hanbingtao/note/448086>
 
-### 往期回顾
+## 往期回顾
 
 在上一篇文章中，我们已经学会了编写一个简单的感知器，并用它来实现一个线性分类器。你应该还记得用来训练感知器的『感知器规则』。然而，我们并没有关心这个规则是怎么得到的。本文通过介绍另外一种『感知器』，也就是『线性单元』，来说明关于机器学习一些基本的概念，比如模型、目标函数、优化算法等等。这些概念对于所有的机器学习算法来说都是通用的，掌握了这些概念，就掌握了机器学习的基本套路。
 
-### 线性单元是啥
+## 线性单元是啥
 
 感知器有一个问题，当面对的数据集不是**线性可分**的时候，『感知器规则』可能无法收敛，这意味着我们永远也无法完成一个感知器的训练。为了解决这个问题，我们使用一个**可导**的**线性函数**来替代感知器的**阶跃函数**，这种感知器就叫做**线性单元**。线性单元在面对线性不可分的数据集时，会收敛到一个最佳的近似上。
 
@@ -26,7 +26,7 @@ $$
 
 这样替换了激活函数之后，**线性单元**将返回一个**实数值**而不是**0,1 分类**。因此线性单元用来解决**回归**问题而不是**分类**问题。
 
-#### 线性单元的模型
+### 线性单元的模型
 
 当我们说**模型**时，我们实际上在谈论根据输入$$x$$预测输出$$y$$的**算法**。比如，$$x$$可以是一个人的工作年限，$$y$$可以是他的月薪，我们可以用某种算法来根据一个人的工作年限来预测他的收入。比如：
 
@@ -75,7 +75,7 @@ $$
 
 长成这种样子模型就叫做**线性模型**，因为输出就是输入特征的**线性组合**。
 
-#### 监督学习和无监督学习
+### 监督学习和无监督学习
 
 接下来，我们需要关心的是这个模型如何训练，也就是参数取什么值最合适。
 
@@ -85,7 +85,7 @@ $$
 
 很多时候，既有$$\mathrm{x}$$又有$$y$$的训练样本是很少的，大部分样本都只有$$\mathrm{x}$$。比如在语音到文本(STT)的识别任务中，$$\mathrm{x}$$是语音，$$y$$是这段语音对应的文本。我们很容易获取大量的语音录音，然而把语音一段一段切分好并**标注**上对应文字则是非常费力气的事情。这种情况下，为了弥补带标注样本的不足，我们可以用**无监督学习方法**先做一些**聚类**，让模型总结出哪些音节是相似的，然后再用少量的带标注的训练样本，告诉模型其中一些音节对应的文字。这样模型就可以把相似的音节都对应到相应文字上，完成模型的训练。
 
-#### 线性单元的目标函数
+### 线性单元的目标函数
 
 现在，让我们只考虑**监督学习**。
 
@@ -139,7 +139,7 @@ $$
 
 由此可见，模型的训练，实际上就是求取到合适的$$w$$，使(式 2)取得最小值。这在数学上称作**优化问题**，而$$E(\mathrm{w})$$就是我们优化的目标，称之为**目标函数**。
 
-#### 梯度下降优化算法
+### 梯度下降优化算法
 
 大学时我们学过怎样求函数$$y=f(x)$$的极值。函数的极值点，就是它的导数$$f'(x)=0$$的那个点。因此我们可以通过解方程$$f'(x)=0$$，求得函数的极值点$$(x_0,y_0)$$。
 
@@ -228,7 +228,7 @@ $$
 
 如果您还是没看明白，建议您也吐血再看一下大学时学过的《线性代数》吧。
 
-##### $$\nabla{E}(\mathrm{w})$$的推导
+#### $$\nabla{E}(\mathrm{w})$$的推导
 
 这一节你尽可以跳过它，并不太会影响到全文的理解。当然如果你非要弄明白每个细节，那恭喜你骚年，机器学习的未来一定是属于你的。
 
@@ -299,7 +299,7 @@ $$
 
 至此，大功告成。
 
-##### 随机梯度下降算法(Stochastic Gradient Descent, SGD)
+#### 随机梯度下降算法(Stochastic Gradient Descent, SGD)
 
 如果我们根据(式 3)来训练模型，那么我们每次更新$$\mathrm{w}$$的迭代，要遍历训练数据中所有的样本进行计算，我们称这种算法叫做**批梯度下降(Batch Gradient Descent)**。如果我们的样本非常大，比如数百万到数亿，那么计算量异常巨大。因此，实用的算法是 SGD 算法。在 SGD 算法中，每次更新$$\mathrm{w}$$的迭代，只计算一个样本。这样对于一个具有数百万样本的训练数据，完成一次遍历就会对$$\mathrm{w}$$更新数百万次，效率大大提升。由于样本的噪音和随机性，每次更新$$\mathrm{w}$$并不一定按照减少$$E$$的方向。然而，虽然存在一定随机性，大量的更新总体上沿着减少$$E$$的方向前进的，因此最后也能收敛到最小值附近。下图展示了 SGD 和 BGD 的区别
 
@@ -309,7 +309,7 @@ $$
 
 最后需要说明的是，SGD 不仅仅效率高，而且随机性有时候反而是好事。今天的目标函数是一个『凸函数』，沿着梯度反方向就能找到全局唯一的最小值。然而对于非凸函数来说，存在许多局部最小值。随机性有助于我们逃离某些很糟糕的局部最小值，从而获得一个更好的模型。
 
-### 实现线性单元
+## 实现线性单元
 
 > 完整代码请参考 GitHub: https://github.com/hanbt/learn_dl/blob/master/linear_unit.py (python2.7)
 
@@ -343,19 +343,19 @@ def get_training_dataset():
     '''
     捏造5个人的收入数据
     '''
-    # 构建训练数据
-    # 输入向量列表，每一项是工作年限
+     构建训练数据
+     输入向量列表，每一项是工作年限
     input_vecs = [[5], [3], [8], [1.4], [10.1]]
-    # 期望的输出列表，月薪，注意要与输入一一对应
+     期望的输出列表，月薪，注意要与输入一一对应
     labels = [5500, 2300, 7600, 1800, 11400]
     return input_vecs, labels
 def train_linear_unit():
     '''
     使用数据训练线性单元
     '''
-    # 创建感知器，输入参数的特征数为1（工作年限）
+     创建感知器，输入参数的特征数为1（工作年限）
     lu = LinearUnit(1)
-    # 训练，迭代10轮, 学习速率为0.01
+     训练，迭代10轮, 学习速率为0.01
     input_vecs, labels = get_training_dataset()
     lu.train(input_vecs, labels, 10, 0.01)
     #返回训练好的线性单元
@@ -363,9 +363,9 @@ def train_linear_unit():
 if __name__ == '__main__':
     '''训练线性单元'''
     linear_unit = train_linear_unit()
-    # 打印训练获得的权重
+     打印训练获得的权重
     print linear_unit
-    # 测试
+     测试
     print 'Work 3.4 years, monthly salary = %.2f' % linear_unit.predict([3.4])
     print 'Work 15 years, monthly salary = %.2f' % linear_unit.predict([15])
     print 'Work 1.5 years, monthly salary = %.2f' % linear_unit.predict([1.5])
@@ -378,7 +378,7 @@ if __name__ == '__main__':
 
 ![02-04](../.gitbook/assets/00/02-04.png)
 
-### 小结
+## 小结
 
 事实上，一个机器学习算法其实只有两部分
 
@@ -393,6 +393,6 @@ if __name__ == '__main__':
 
 现在，经过漫长的烧脑，你已经具备了学习**神经网络**的必备知识。下一篇文章，我们将介绍本系列文章的主角：**神经网络**，以及用来训练神经网络的大名鼎鼎的算法：**反向传播**算法。至于现在，我们应该暂时忘记一切，尽情奖励自己一下吧。
 
-### 参考资料
+## 参考资料
 
 1. Tom M. Mitchell, "机器学习", 曾华军等译, 机械工业出版社
