--- a/00/03.md
+++ b/00/03.md
@@ -1,12 +1,12 @@
-## 神经网络和反向传播算法
+# 神经网络和反向传播算法
 
 原文地址：<https://www.zybuluo.com/hanbingtao/note/476663>
 
-### 往期回顾
+## 往期回顾
 
 在上一篇文章中，我们已经掌握了机器学习的基本套路，对模型、目标函数、优化算法这些概念有了一定程度的理解，而且已经会训练单个的感知器或者线性单元了。在这篇文章中，我们将把这些单独的单元按照一定的规则相互连接在一起形成**神经网络**，从而奇迹般的获得了强大的学习能力。我们还将介绍这种网络的训练算法：**反向传播算法**。最后，我们依然用代码实现一个神经网络。如果您能坚持到本文的结尾，将会看到我们用自己实现的神经网络去识别手写数字。现在请做好准备，您即将双手触及到深度学习的大门。
 
-### 神经元
+## 神经元
 
 神经元和感知器本质上是一样的，只不过我们说感知器的时候，它的激活函数是**阶跃函数**；而当我们说神经元时，激活函数往往选择为 sigmoid 函数或 tanh 函数。如下图所示：
 
@@ -45,7 +45,7 @@ $$
 
 可以看到，sigmoid 函数的导数非常有趣，它可以用 sigmoid 函数自身来表示。这样，一旦计算出 sigmoid 函数的值，计算它的导数的值就非常方便。
 
-### 神经网络是啥
+## 神经网络是啥
 
 ![00-03-03][00-03-03]
 
@@ -58,7 +58,7 @@ $$
 
 上面这些规则定义了全连接神经网络的结构。事实上还存在很多其它结构的神经网络，比如卷积神经网络(CNN)、循环神经网络(RNN)，他们都具有不同的连接规则。
 
-### 计算神经网络的输出
+## 计算神经网络的输出
 
 神经网络实际上就是一个输入向量$$\vec{x}$$到输出向量$$\vec{y}$$的函数，即：
 
@@ -98,7 +98,7 @@ $$
 
 同理，我们还可以计算出$$y_2$$的值。这样输出层所有节点的输出值计算完毕，我们就得到了在输入向量$$\vec{x}=\begin{bmatrix}x_1\\x_2\\x_3\end{bmatrix}$$时，神经网络的输出向量$$\vec{y}=\begin{bmatrix}y_1\\y_2\end{bmatrix}$$。这里我们也看到，**输出向量的维度和输出层神经元个数相同**。
 
-#### 神经网络的矩阵表示
+### 神经网络的矩阵表示
 
 神经网络的计算如果用矩阵来表示会很方便（当然逼格也更高），我们先来看看隐藏层的矩阵表示。
 
@@ -201,13 +201,13 @@ $$
 
 这就是神经网络输出值的计算方法。
 
-### 神经网络的训练
+## 神经网络的训练
 
 现在，我们需要知道一个神经网络的每个连接上的权值是如何得到的。我们可以说神经网络是一个**模型**，那么这些权值就是模型的**参数**，也就是模型要学习的东西。然而，一个神经网络的连接方式、网络的层数、每层的节点数这些参数，则不是学习出来的，而是人为事先设置的。对于这些人为设置的参数，我们称之为**超参数(Hyper-Parameters)**。
 
 接下来，我们将要介绍神经网络的训练算法：反向传播算法。
 
-#### 反向传播算法(Back Propagation)
+### 反向传播算法(Back Propagation)
 
 我们首先直观的介绍反向传播算法，最后再来介绍这个算法的推导。当然读者也可以完全跳过推导部分，因为即使不知道如何推导，也不影响你写出来一个神经网络的训练代码。事实上，现在神经网络成熟的开源实现多如牛毛，除了练手之外，你可能都没有机会需要去写一个神经网络。
 
@@ -275,7 +275,7 @@ $$
 
 以上就是基本的反向传播算法，并不是很复杂，您弄清楚了么？
 
-#### 反向传播算法的推导
+### 反向传播算法的推导
 
 反向传播算法其实就是链式求导法则的应用。然而，这个如此简单且显而易见的方法，却是在 Roseblatt 提出感知器算法将近 30 年之后才被发明和普及的。对此，Bengio 这样回应道：
 
@@ -328,7 +328,7 @@ $$
 
 对于$$\frac{\partial{E_d}}{\partial{net_j}}$$的推导，需要区分**输出层**和**隐藏层**两种情况。
 
-##### 输出层权值训练
+#### 输出层权值训练
 
 对于**输出层**来说，$$net_j$$仅能通过节点$$j$$的输出$$y_j$$值来影响网络其它部分，也就是说$$E_d$$是$$y_j$$的函数，而$$y_j$$是$$net_j$$的函数，其中$$y_j=sigmoid(net_j)$$。所以我们可以再次使用链式求导法则：
 
@@ -383,7 +383,7 @@ $$
 
 上式就是**式 5**。
 
-##### 隐藏层权值训练
+#### 隐藏层权值训练
 
 现在我们要推导出隐藏层的$$\frac{\partial{E_d}}{\partial{net_j}}$$。
 
@@ -412,7 +412,7 @@ $$
 
 至此，我们已经推导出了反向传播算法。需要注意的是，我们刚刚推导出的训练规则是根据激活函数是 sigmoid 函数、平方和误差、全连接网络、随机梯度下降优化算法。如果激活函数不同、误差计算方式不同、网络连接结构不同、优化算法不同，则具体的训练规则也会不一样。但是无论怎样，训练规则的推导方式都是一样的，应用链式求导法则进行推导即可。
 
-### 神经网络的实现
+## 神经网络的实现
 
 > 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/bp.py> (python2.7)
 
@@ -433,7 +433,7 @@ $$
 Node 实现如下：
 
 ```python
-# 节点类，负责记录和维护节点自身信息以及与这个节点相关的上下游连接，实现输出值和误差项的计算。
+ 节点类，负责记录和维护节点自身信息以及与这个节点相关的上下游连接，实现输出值和误差项的计算。
 class Node(object):
     def __init__(self, layer_index, node_index):
         '''
@@ -711,7 +711,7 @@ class Network(object):
 
 至此，实现了一个基本的全连接神经网络。可以看到，同神经网络的强大学习能力相比，其实现还算是很容易的。
 
-#### 梯度检查
+### 梯度检查
 
 怎么保证自己写的神经网络没有 BUG 呢？事实上这是一个非常重要的问题。一方面，千辛万苦想到一个算法，结果效果不理想，那么是算法本身错了还是代码实现错了呢？定位这种问题肯定要花费大量的时间和精力。另一方面，由于神经网络的复杂性，我们几乎无法事先知道神经网络的输入和输出，因此类似 TDD(测试驱动开发)这样的开发方法似乎也不可行。
 
@@ -760,40 +760,40 @@ def gradient_check(network, sample_feature, sample_label):
     sample_feature: 样本的特征
     sample_label: 样本的标签
     '''
-    # 计算网络误差
+     计算网络误差
     network_error = lambda vec1, vec2: \
             0.5 * reduce(lambda a, b: a + b,
                       map(lambda v: (v[0] - v[1]) * (v[0] - v[1]),
                           zip(vec1, vec2)))
-    # 获取网络在当前样本下每个连接的梯度
+     获取网络在当前样本下每个连接的梯度
     network.get_gradient(sample_feature, sample_label)
-    # 对每个权重做梯度检查
+     对每个权重做梯度检查
     for conn in network.connections.connections:
-        # 获取指定连接的梯度
+         获取指定连接的梯度
         actual_gradient = conn.get_gradient()
-        # 增加一个很小的值，计算网络的误差
+         增加一个很小的值，计算网络的误差
         epsilon = 0.0001
         conn.weight += epsilon
         error1 = network_error(network.predict(sample_feature), sample_label)
-        # 减去一个很小的值，计算网络的误差
-        conn.weight -= 2 * epsilon # 刚才加过了一次，因此这里需要减去2倍
+         减去一个很小的值，计算网络的误差
+        conn.weight -= 2 * epsilon  刚才加过了一次，因此这里需要减去2倍
         error2 = network_error(network.predict(sample_feature), sample_label)
-        # 根据式6计算期望的梯度值
+         根据式6计算期望的梯度值
         expected_gradient = (error2 - error1) / (2 * epsilon)
-        # 打印
+         打印
         print 'expected gradient: \t%f\nactual gradient: \t%f' % (
             expected_gradient, actual_gradient)
 ```
 
 至此，会推导、会实现、会抓 BUG，你已经摸到深度学习的大门了。接下来还需要不断的实践，我们用刚刚写过的神经网络去识别手写数字。
 
-### 神经网络实战——手写数字识别
+## 神经网络实战——手写数字识别
 
 针对这个任务，我们采用业界非常流行的 MNIST 数据集。MNIST 大约有 60000 个手写字母的训练样本，我们使用它训练我们的神经网络，然后再用训练好的网络去识别手写数字。
 
 手写数字识别是个比较简单的任务，数字只可能是 0-9 中的一个，这是个 10 分类问题。
 
-#### 超参数的确定
+### 超参数的确定
 
 我们首先需要确定网络的层数和每层的节点数。关于第一个问题，实际上并没有什么理论化的方法，大家都是根据经验来拍，如果没有经验的话就随便拍一个。然后，你可以多试几个值，训练不同层数的神经网络，看看哪个效果最好就用哪个。嗯，现在你可能明白为什么说深度学习是个手艺活了，有些手艺很让人无语，而有些手艺还是很有技术含量的。
 
@@ -823,7 +823,7 @@ $$
 
 对于 3 层$$784*300*10$$的全连接网络，总共有$$300*(784+1)+10*(300+1)=238510$$个参数！神经网络之所以强大，是它提供了一种非常简单的方法去实现大量的参数。目前百亿参数、千亿样本的超大规模神经网络也是有的。因为 MNIST 只有 6 万个训练样本，参数太多了很容易过拟合，效果反而不好。
 
-#### 模型的训练和评估
+### 模型的训练和评估
 
 MNIST 数据集包含 10000 个测试样本。我们先用 60000 个训练样本训练我们的网络，然后再用测试样本对网络进行测试，计算识别错误率：
 
@@ -835,7 +835,7 @@ $$
 
 我们每训练 10 轮，评估一次准确率。当准确率开始下降时（出现了过拟合）终止训练。
 
-#### 代码实现
+### 代码实现
 
 首先，我们需要把 MNIST 数据集处理为神经网络能够接受的形式。MNIST 训练集的文件格式可以参考官方网站，这里不在赘述。每个训练样本是一个 28\*28 的图像，我们按照行优先，把它转化为一个 784 维的向量。每个标签是 0-9 的值，我们将其转换为一个 10 维的 one-hot 向量：如果标签值为$$n$$，我们就把向量的第$$n$$维（从 0 开始编号）设置为 0.9，而其它维设置为 0.1。例如，向量`[0.1,0.1,0.9,0.1,0.1,0.1,0.1,0.1,0.1,0.1]`表示值 2。
 
@@ -843,11 +843,11 @@ $$
 
 ```python
 #!/usr/bin/env python
-# -*- coding: UTF-8 -*-
+ -*- coding: UTF-8 -*-
 import struct
 from bp import *
 from datetime import datetime
-# 数据加载器基类
+ 数据加载器基类
 class Loader(object):
     def __init__(self, path, count):
         '''
@@ -870,7 +870,7 @@ class Loader(object):
         将unsigned byte字符转换为整数
         '''
         return struct.unpack('B', byte)[0]
-# 图像数据加载器
+ 图像数据加载器
 class ImageLoader(Loader):
     def get_picture(self, content, index):
         '''
@@ -904,7 +904,7 @@ class ImageLoader(Loader):
                 self.get_one_sample(
                     self.get_picture(content, index)))
         return data_set
-# 标签数据加载器
+ 标签数据加载器
 class LabelLoader(Loader):
     def load(self):
         '''
@@ -996,7 +996,7 @@ if __name__ == '__main__':
 
 在我的机器上测试了一下，1 个 epoch 大约需要 9000 多秒，所以要对代码做很多的性能优化工作（比如用向量化编程）。训练要很久很久，可以把它上传到服务器上，在 tmux 的 session 里面去运行。为了防止异常终止导致前功尽弃，我们每训练 10 轮，就把获得参数值保存在磁盘上，以便后续可以恢复。(代码略)
 
-### 向量化编程
+## 向量化编程
 
 > 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/fc.py> (python2.7)
 
@@ -1044,7 +1044,7 @@ $$
 现在，我们根据上面几个公式，重新实现一个类：FullConnectedLayer。它实现了全连接层的前向和后向计算：
 
 ```python
-# 全连接层实现类
+ 全连接层实现类
 class FullConnectedLayer(object):
     def __init__(self, input_size, output_size,
                  activator):
@@ -1057,19 +1057,19 @@ class FullConnectedLayer(object):
         self.input_size = input_size
         self.output_size = output_size
         self.activator = activator
-        # 权重数组W
+         权重数组W
         self.W = np.random.uniform(-0.1, 0.1,
             (output_size, input_size))
-        # 偏置项b
+         偏置项b
         self.b = np.zeros((output_size, 1))
-        # 输出向量
+         输出向量
         self.output = np.zeros((output_size, 1))
     def forward(self, input_array):
         '''
         前向计算
         input_array: 输入向量，维度必须等于input_size
         '''
-        # 式2
+         式2
         self.input = input_array
         self.output = self.activator.forward(
             np.dot(self.W, input_array) + self.b)
@@ -1078,7 +1078,7 @@ class FullConnectedLayer(object):
         反向计算W和b的梯度
         delta_array: 从上一层传递过来的误差项
         '''
-        # 式8
+         式8
         self.delta = self.activator.backward(self.input) * np.dot(
             self.W.T, delta_array)
         self.W_grad = np.dot(delta_array, self.input.T)
@@ -1096,13 +1096,13 @@ class FullConnectedLayer(object):
 现在，我们对 Network 类稍作修改，使之用到 FullConnectedLayer：
 
 ```python
-# Sigmoid激活函数类
+ Sigmoid激活函数类
 class SigmoidActivator(object):
     def forward(self, weighted_input):
         return 1.0 / (1.0 + np.exp(-weighted_input))
     def backward(self, output):
         return output * (1 - output)
-# 神经网络类
+ 神经网络类
 class Network(object):
     def __init__(self, layers):
         '''
@@ -1157,7 +1157,7 @@ class Network(object):
 
 现在，Network 类也清爽多了，用我们的新代码再次训练一下 MNIST 数据集吧。
 
-### 小结
+## 小结
 
 至此，你已经完成了又一次漫长的学习之旅。你现在应该已经明白了神经网络的基本原理，高兴的话，你甚至有能力去动手实现一个，并用它解决一些问题。如果感到困难也不要气馁，这篇文章是一个重要的分水岭，如果你完全弄明白了的话，在真正的『小白』和装腔作势的『大牛』面前吹吹牛是完全没有问题的。
 
@@ -1169,7 +1169,7 @@ class Network(object):
 
 下一篇文章，我们介绍不同结构的神经网络，比如鼎鼎大名的**卷积神经网络**，它在图像和语音领域已然创造了诸多奇迹，在自然语言处理领域的研究也如火如荼。某种意义上说，它的成功大大提升了人们对于深度学习的信心。
 
-### 参考资料
+## 参考资料
 
 1. Tom M. Mitchell, "机器学习", 曾华军等译, 机械工业出版社
 2. CS 224N / Ling 284, Neural Networks for Named Entity Recognition
