--- a/lstm/03.md
+++ b/lstm/03.md
@@ -1,12 +1,12 @@
-## How to Prepare Data for LSTM
+# How to Prepare Data for LSTM
 
-### 准备数值数据
+## 准备数值数据
 
 训练神经网络（如长-短期记忆递归神经网络）时，可能需要缩放序列预测问题的数据。当网络适合具有一系列值（例如 10 到 100 秒的数量）的无标度数据时，大的输入可能会减慢网络的学习和收敛速度，并且在某些情况下会阻止网络客观地学习您的问题。
 
 您可能需要考虑两种类型的系列缩放：标准化和标准化。这两个都可以通过使用 Python 中的 scikit learn 机器学习库来实现。
 
-#### 归一化系列数据（Normalize Series Data）
+### 归一化系列数据（Normalize Series Data）
 
 归一化是对原始范围内的数据进行重新缩放，使所有值都在 0 和 1 的范围内。归一化要求您知道或能够准确估计最小和最大可观测值。您可以根据可用的数据估计这些值。如果序列呈上升或下降趋势，估计这些期望值可能会很困难，并且归一化可能不是解决问题的最佳方法。
 
@@ -21,21 +21,21 @@
 ```python
 from pandas import Series
 from sklearn.preprocessing import MinMaxScaler
-# define contrived series
+ define contrived series
 data = [10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0, 90.0, 100.0]
 series = Series(data)
 print(series)
-# prepare data for normalization
+ prepare data for normalization
 values = series.values
 values = values.reshape((len(values), 1))
-# train the normalization
+ train the normalization
 scaler = MinMaxScaler(feature_range=(0, 1))
 scaler = scaler.fit(values)
 print( Min: %f, Max: %f % (scaler.data_min_, scaler.data_max_))
-# normalize the dataset and print
+ normalize the dataset and print
 normalized = scaler.transform(values)
 print(normalized)
-# inverse transform and print
+ inverse transform and print
 inversed = scaler.inverse_transform(normalized)
 print(inversed)
 ```
@@ -80,7 +80,7 @@ Min: 10.000000, Max: 100.000000
 
 ```
 
-#### 标准化系列数据（Standardize Series Data）
+### 标准化系列数据（Standardize Series Data）
 
 标准化数据集涉及重新调整值的分布，使观测值的平均值为 0，标准偏差为 1。这可以被认为是减去平均值或使数据居中。
 
@@ -92,21 +92,21 @@ Min: 10.000000, Max: 100.000000
 from pandas import Series
 from sklearn.preprocessing import StandardScaler
 from math import sqrt
-# define contrived series
+ define contrived series
 data = [1.0, 5.5, 9.0, 2.6, 8.8, 3.0, 4.1, 7.9, 6.3]
 series = Series(data)
 print(series)
-# prepare data for normalization
+ prepare data for normalization
 values = series.values
 values = values.reshape((len(values), 1))
-# train the normalization
+ train the normalization
 scaler = StandardScaler()
 scaler = scaler.fit(values)
 print( 'Mean: %f, StandardDeviation: %f' % (scaler.mean_, sqrt(scaler.var_)))
-# normalize the dataset and print
+ normalize the dataset and print
 standardized = scaler.transform(values)
 print(standardized)
-# inverse transform and print
+ inverse transform and print
 inversed = scaler.inverse_transform(standardized)
 print(inversed)
 ```
@@ -145,7 +145,7 @@ Mean: 5.355556, StandardDeviation: 2.712568
  [6.3]]
 ```
 
-#### 缩放时的实际考虑
+### 缩放时的实际考虑
 
 在缩放序列数据时有一些实际考虑。
 
@@ -157,22 +157,22 @@ Mean: 5.355556, StandardDeviation: 2.712568
 - 在正确的时间缩放。在正确的时间应用任何缩放变换都很重要。例如，如果您有一系列非平稳的量，则在第一次使数据平稳后缩放可能比较合适。将序列转换为监督学习问题后缩放该序列是不合适的，因为每个列都会被不同地处理，这是不正确的。
 - 如有疑问，请按比例缩放。您可能需要重新调整输入和输出变量的大小。如果有疑问，至少要规范化数据。
 
-### 准备分类数据
+## 准备分类数据
 
-#### 如何将分类数据转换为数值数据
+### 如何将分类数据转换为数值数据
 
 这涉及两个步骤：
 
 1. Integer Encoding.
 2. One Hot Encoding.
 
-##### Integer Encoding
+#### Integer Encoding
 
 作为第一步，为每个唯一的类别值分配一个整数值。例如，红色是 1，绿色是 2，蓝色是 3。这称为标签编码或整数编码，并且很容易可逆。对于某些变量，这可能就足够了。
 
 整数值之间具有自然的有序关系，机器学习算法可以理解和利用这种关系。例如，上面的 place 示例这样的序数变量将是一个很好的示例，其中标签编码就足够了。
 
-##### One Hot Encoding
+#### One Hot Encoding
 
 对于不存在这种顺序关系的分类变量，整数编码是不够的。事实上，使用这种编码并允许模型假定类别之间的自然顺序可能会导致性能差或意外结果（类别之间的中间预测）。
 
@@ -185,7 +185,7 @@ red, green, blue
 0, 	   0, 	 1
 ```
 
-#### One Hot Encode with scikit-learn
+### One Hot Encode with scikit-learn
 
 在本例中，我们假设您有以下 3 个标签的输出序列：cold、warm、Hot。10 个时间步骤的示例序列可以是：
 
@@ -202,20 +202,20 @@ from numpy import array
 from numpy import argmax
 from sklearn.preprocessing import LabelEncoder
 from sklearn.preprocessing import OneHotEncoder
-# define example
+ define example
 data = ['cold', 'cold', 'warm', 'cold', 'hot', 'hot', 'warm', 'cold', 'warm', 'hot']
 values = array(data)
 print(values)
-# integer encode
+ integer encode
 label_encoder = LabelEncoder()
 integer_encoded = label_encoder.fit_transform(values)
 print(integer_encoded)
-# binary encode
+ binary encode
 onehot_encoder = OneHotEncoder(sparse=False)
 integer_encoded = integer_encoded.reshape(len(integer_encoded), 1)
 onehot_encoded = onehot_encoder.fit_transform(integer_encoded)
 print(onehot_encoded)
-# invert first example
+ invert first example
 inverted = label_encoder.inverse_transform([argmax(onehot_encoded[0, :])])
 print(inverted)
 
@@ -244,27 +244,27 @@ print(inverted)
 
 ```
 
-### 准备不同长度的序列
+## 准备不同长度的序列
 
 深度学习库假设数据的矢量化表示。在可变长度序列预测问题中，这要求对数据进行转换，使每个序列具有相同的长度。这种矢量化允许代码为您选择的深度学习算法高效地批量执行矩阵操作。
 
-#### 序列填充(Sequence Padding)
+### 序列填充(Sequence Padding)
 
 在 Keras 深度学习 lib 库中，PAD 序列（）函数可以用来填充可变长度序列。默认的填充值是 0.0，这适用于大多数应用程序，不过可以通过 value 参数指定首选值来更改。例如：要应用于序列开始或结束的填充，称为前序列或后序列填充，可以由 padding 参数指定，如下所示。
 
-##### 预序列填充（Pre-Sequence Padding）
+#### 预序列填充（Pre-Sequence Padding）
 
 Pre-Sequence Padding 是默认值（Padding=‘Pre’）。下面的示例演示如何使用 0 值预添加 3 个输入序列。
 
 ```python
 from keras.preprocessing.sequence import pad_sequences
-# define sequences
+ define sequences
 sequences = [
     [1, 2, 3, 4],
     [1, 2, 3],
     [1]
     ]
-# pad sequence
+ pad sequence
 padded = pad_sequences(sequences)
 print(padded)
 ```
@@ -277,19 +277,19 @@ print(padded)
  [0 0 0 1]]
 ```
 
-##### 后置序列填充（Post-Sequence Padding）
+#### 后置序列填充（Post-Sequence Padding）
 
 填充也可以应用于序列的末尾，这可能更适合于某些问题域。可以通过将 padding 参数设置为 Post 来指定 Post 序列填充。
 
 ```python
 from keras.preprocessing.sequence import pad_sequences
-# define sequences
+ define sequences
 sequences = [
     [1, 2, 3, 4],
     [1, 2, 3],
     [1]
     ]
-# pad sequence
+ pad sequence
 padded = pad_sequences(sequences, padding='post')
 print(padded)
 
@@ -303,24 +303,24 @@ print(padded)
  [1 0 0 0]]
 ```
 
-#### 序列截断（Sequence Truncation）
+### 序列截断（Sequence Truncation）
 
 序列的长度也可以修剪到所需的长度。序列所需的长度可以用 maxlen 参数指定为多个时间步。有两种方法可以截断序列：从序列的开始或结束删除时间步。
 
-##### 预序列截断 Pre-Sequence Truncation
+#### 预序列截断 Pre-Sequence Truncation
 
 预序列截断默认的截断方法是从序列开始处删除时间步。这称为预序列截断。下面的示例将序列截断为所需的长度 2。
 
 ```python
 from keras.preprocessing.sequence import pad_sequences
-# define sequences
+ define sequences
 sequences = [
     [1, 2, 3, 4],
     [1, 2, 3],
     [1]
     ]
 
-# truncate sequence
+ truncate sequence
 truncated= pad_sequences(sequences, maxlen=2)
 print(truncated)
 ```
@@ -333,20 +333,20 @@ print(truncated)
  [0 1]]
 ```
 
-##### 后序列截断（Post-Sequence Truncation）
+#### 后序列截断（Post-Sequence Truncation）
 
 序列也可以通过删除序列末尾的时间步长来进行修剪。这种方法可能更适合于一些问题领域。通过将截断参数从默认 pre 更改为 Post，可以配置 Post 序列截断，如下所示：
 
 ```python
 from keras.preprocessing.sequence import pad_sequences
-# define sequences
+ define sequences
 sequences = [
     [1, 2, 3, 4],
     [1, 2, 3],
     [1]
     ]
 
-# truncate sequence
+ truncate sequence
 truncated= pad_sequences(sequences, maxlen=2, truncating='post')
 print(truncated)
 ```
@@ -361,11 +361,11 @@ print(truncated)
 
 对于何时填充和何时截断不同长度的输入序列，没有经验法则。例如，为了提高效率，在情感分析中截断很长的文本可能是有意义的，或者填充短文本并让模型学习忽略或显式屏蔽零输入值以确保没有数据丢失也是有意义的。我建议为序列预测问题测试一组不同的表示，并对那些产生最佳模型技巧的表示进行加倍。
 
-### 序列预测作为监督学习
+## 序列预测作为监督学习
 
 序列预测问题，必须重新构造为监督学习问题。也就是说，数据必须从一个序列转换为一对输入和输出对。
 
-#### Sequence vs Supervised Learning
+### Sequence vs Supervised Learning
 
 在我们开始之前，让我们花点时间更好地理解原始输入序列和监督学习数据的形式。考虑一个按时间索引排序的数字序列。
 这可以看作是有序值的列表或列。例如：
@@ -400,7 +400,7 @@ X, y
 
 这将表示序列的 1-滞后变换，使得必须在给定序列的前一时间步的情况下预测当前时间步。
 
-#### Pandas `shift()` Function
+### Pandas `shift()` Function
 
 帮助将时间序列数据转换为监督学习问题的关键函数是 Pandas shift（）函数。给定一个数据帧，shift（）函数可用于创建向前推（前面添加了一行 NaN 值）或向后拉（后面添加了一行 NaN 值）的列的副本。
 
@@ -408,7 +408,7 @@ X, y
 
 ```python
 from pandas import DataFrame
-# define the sequence
+ define the sequence
 df = DataFrame()
 df['t'] = [x for x in range(10)]
 print(df)
@@ -435,10 +435,10 @@ print(df)
 
 ```python
 from pandas import DataFrame
-# define the sequence
+ define the sequence
 df = DataFrame()
 df['t'] = [x for x in range(10)]
-# shift forward
+ shift forward
 df['t-1'] = df['t'].shift(1)
 print(df)
 ```
@@ -465,10 +465,10 @@ print(df)
 
 ```python
 from pandas import DataFrame
-# define the sequence
+ define the sequence
 df = DataFrame()
 df[ t ] = [x for x in range(10)]
-# shift forward
+ shift forward
 df[ t-1 ] = df[ t ].shift(-1)
 print(df)
 
@@ -494,9 +494,9 @@ print(df)
 
 这不仅允许经典的 X->y 预测，而且允许输入和输出都可以是序列的 X->y 预测。此外，移位函数也适用于所谓的多元时间序列问题。也就是说，有多个观测值（例如温度和压力），而不是一组时间序列的观测值。时间序列中的所有变量都可以向前或向后移动，以创建多变量输入和输出序列。
 
-### 进一步阅读
+## 进一步阅读
 
-#### Numeric Scaling APIs
+### Numeric Scaling APIs
 
 1. MinMaxScaler API in scikit-learn.
    <https://goo.gl/H3qHJU>
@@ -507,7 +507,7 @@ print(df)
 3. Should I normalize/standardize/rescale the data? Neural Nets FAQ.
    <ftp://ftp.sas.com/pub/neural/FAQ2.html#A_std>
 
-#### Categorical Encoding APIs
+### Categorical Encoding APIs
 
 1. LabelEncoder API in scikit-learn.
    <https://goo.gl/Y2bn3T>
@@ -516,16 +516,16 @@ print(df)
 3. NumPy argmax() API.
    <https://docs.scipy.org/doc/numpy/reference/generated/numpy.argmax.html>
 
-#### Varied Length Sequence APIs
+### Varied Length Sequence APIs
 
 1. pad sequences() API in Keras.
    <https://keras.io/preprocessing/sequence/>
 
-#### Supervised Learning APIs
+### Supervised Learning APIs
 
 1. shift() function API in Pandas.<https://goo.gl/N3M3nG>
 
-### Summary
+## Summary
 
 1. 如何缩放数字数据以及如何转换分类数据。
 2. 如何填充和截断不同长度的输入序列。
