--- a/lstm/04.md
+++ b/lstm/04.md
@@ -1,6 +1,6 @@
-## How to Develop LSTMs in Keras
+# How to Develop LSTMs in Keras
 
-### Define the Model
+## Define the Model
 
 第一步是定义网络。在 Keras 中，神经网络被定义为一系列的层。这些层的容器是`Sequential`类。第一步是创建`Sequential`类的实例。然后，您可以创建图层并按它们应该连接的顺序添加它们。由内存单元组成的 LSTM 递归层称为`LSTM()`。通常紧跟在 LSTMlayers 之后并用于输出预测的完全连接层称为`Dense()`。
 
@@ -62,7 +62,7 @@ model.add(Activation(sigmoid))
 2. Binary Classification (2 class): Logistic activation function, or sigmoid, and one neuron the output layer.
 3. Multiclass Classification (> 2 class): Softmax activation function, or softmax, and one output neuron per class value, assuming a one hot encoded output pattern.
 
-### Compile the Model
+## Compile the Model
 
 一旦我们定义了我们的网络，我们就必须编译它。编译是一个高效的步骤。它将我们定义的简单层序列转换为高效的矩阵转换序列，其格式将在 GPU 或 CPU 上执行，具体取决于 Keras 的配置方式。将编译视为网络的预计算步骤。定义模型后总是需要它。
 
@@ -100,7 +100,7 @@ model.compile(optimizer=algorithm, loss= mse )
 model.compile(optimizer= sgd , loss= mean_squared_error , metrics=[ accuracy ])
 ```
 
-### Fit the Model
+## Fit the Model
 
 一旦网络被编译，它就可以被拟合，这意味着调整训练数据集上的权重。拟合网络需要指定训练数据，包括输入模式矩阵 X 和匹配输出模式数组 y。使用时间反向传播算法对网络进行训练，并根据编译模型时指定的优化算法和损失函数进行优化。
 
@@ -130,7 +130,7 @@ model.fit(X, y, batch_size=32, epochs=100)
 history = model.fit(X, y, batch_size=10, epochs=100, verbose=0)
 ```
 
-### Evaluate the Model
+## Evaluate the Model
 
 一旦网络经过训练，就可以对其进行评估。可以根据训练数据对网络进行评估，但这并不能作为预测模型提供网络性能的有用指示，因为它以前已经看到了所有这些数据。我们可以在单独的数据集上评估网络的性能，在测试期间是看不见的。这将提供对网络在预测未来未知数据方面的性能的估计。
 
@@ -146,7 +146,7 @@ loss, accuracy = model.evaluate(X, y)
 loss, accuracy = model.evaluate(X, y, verbose=0)
 ```
 
-### Make Predictions on the Model
+## Make Predictions on the Model
 
 一旦我们对拟合模型的性能感到满意，我们就可以使用它对新数据进行预测。这与使用新输入模式数组调用模型上的 predict（）函数一样简单。例如：
 
@@ -168,7 +168,7 @@ predictions = model.predict_classes(X)
 predictions = model.predict(X, verbose=0)
 ```
 
-### LSTM State Management
+## LSTM State Management
 
 每个 LSTM 存储单元都保持累积的内部状态。这种内部状态可能需要在网络训练期间和进行预测时仔细管理序列预测问题。默认情况下，网络中所有 LSTM 内存单元的内部状态在每次批处理后（例如，更新网络权重时）重置。这意味着批量大小的配置在以下三个方面之间施加了张力：
 
@@ -216,11 +216,11 @@ for i in range(1000):
 
 我鼓励您集思广益，找出序列预测问题和网络配置的不同框架，测试并选择那些在预测误差方面最有前途的模型。
 
-### Examples of Preparing Data
+## Examples of Preparing Data
 
 很难理解如何准备序列数据以输入 LSTM 模型。对于如何定义 LSTM 模型的输入层，经常会出现混淆。对于如何将序列数据（可能是 1D 或 2D 数字矩阵）转换为 LSTM 输入层所需的 3D 格式，也存在一些混淆。在本节中，您将学习重塑序列数据和定义 LSTM 模型的输入层的两个示例。
 
-#### Example of LSTM With Single Input Sample
+### Example of LSTM With Single Input Sample
 
 Consider the case where you have one sequence of multiple time steps and one feature. For example, this could be a sequence of 10 values:
 
@@ -256,7 +256,7 @@ model.add(LSTM(32, input_shape=(10, 1)))
 ...
 ```
 
-#### Example of LSTM With Multiple Input Features
+### Example of LSTM With Multiple Input Features
 
 Consider the case where you have multiple parallel series as input for your model. For example, this could be two parallel series of 10 values:
 
@@ -297,7 +297,7 @@ model.add(LSTM(32, input_shape=(10, 2)))
 ...
 ```
 
-#### Tips for LSTM Input
+### Tips for LSTM Input
 
 1. This section lists some final tips to help you when preparing your input data for LSTMs.
 2. The LSTM input layer must be 3D.
@@ -308,11 +308,11 @@ model.add(LSTM(32, input_shape=(10, 2)))
 7. The reshape() function on NumPy arrays can be used to reshape your 1D or 2D data to be 3D.
 8. The reshape() function takes a tuple as an argument that defines the new shape.
 
-### Further Reading
+## Further Reading
 
 This section provides some resources for further reading.
 
-#### Keras APIs
+### Keras APIs
 
 1. Keras API for Sequential Models.
    <https://keras.io/models/sequential/>
@@ -323,7 +323,7 @@ This section provides some resources for further reading.
 4. Keras API for loss functions.
    <https://keras.io/losses/>
 
-#### Other APIs
+### Other APIs
 
 1. NumPy reshape() API.
    <https://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html>
